--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,19 +12,32 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <TextView
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login"
+            android:text="Sign in to Facebook"
+            android:textAlignment="center"
             android:textSize="20dp"
             android:textStyle="bold"
             android:padding="30dp"></TextView>
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+
+            android:layout_marginLeft="130dp"
+            android:layout_marginBottom="50dp"
+            app:srcCompat="@drawable/facebook_logo" />
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textField"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
+            android:textAlignment="center"
             android:layout_height="wrap_content"
             android:hint="enter username"
-            android:paddingLeft="30dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
+            android:layout_marginBottom="20dp"
 
             >
 
@@ -38,10 +51,11 @@
         </com.google.android.material.textfield.TextInputLayout>
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/textField"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="enter password"
-            android:paddingLeft="30dp"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
 
             >
 
@@ -54,6 +68,16 @@
                 />
 
         </com.google.android.material.textfield.TextInputLayout>
+       <Button
+           android:layout_width="match_parent"
+           android:layout_height="50dp"
+           android:text="Login"
+           android:backgroundTint="@color/light_blue"
+           android:layout_marginLeft="60dp"
+           android:layout_marginRight="60dp"
+           android:layout_marginTop="50dp"
+           ></Button>
+
     </LinearLayout>
 </LinearLayout>
 
